--- a/envs/template.env
+++ b/envs/template.env
@@ -5,8 +5,12 @@ export CC_API_KEY=
 export CC_API_SECRET=
 export SASL_JAAS_CONFIG='org.apache.kafka.common.security.plain.PlainLoginModule required username\="KEY_HERE" password\="SECRET_KEY_HERE";'
 export SASL_JAAS_CONFIG_PROPERTY_FORMAT='org.apache.kafka.common.security.plain.PlainLoginModule required username="KEY_HERE" password="SECRET_KEY_HERE";'
-export BASIC_AUTH_CREDENTIALS_SOURCE=
-export SCHEMA_REGISTRY_BASIC_AUTH_USER_INFO=
-export SCHEMA_REGISTRY_URL=http://schema-registry:8085
 export REPOSITORY=confluentinc
 export CONFLUENT_DOCKER_TAG=5.4.1
+export CONNECT_CONFIGS_TOPIC=connect-xyz-configs
+export CONNECT_OFFSETS_TOPIC=connect-xyz-offsets
+export CONNECT_STATUS_TOPIC=connect-xyz-status
+export CONNECT_GROUP_ID=connect-xyz
+export SCHEMA_REGISTRY_URL=
+export SCHEMA_REGISTRY_KEY=
+export SCHEMA_REGISTRY_SECRET=
