adding code for connecting to KSQL on CC

--- a/envs/template.env
+++ b/envs/template.env
@@ -3,8 +3,8 @@ export SN_PASSWORD=
 export BOOTSTRAP_SERVERS=
 export CC_API_KEY=
 export CC_API_SECRET=
-export SASL_JAAS_CONFIG='org.apache.kafka.common.security.plain.PlainLoginModule required username\="KEY_HERE" password\="SECRET_KEY_HERE";'
-export SASL_JAAS_CONFIG_PROPERTY_FORMAT='org.apache.kafka.common.security.plain.PlainLoginModule required username="KEY_HERE" password="SECRET_KEY_HERE";'
+export SASL_JAAS_CONFIG='org.apache.kafka.common.security.plain.PlainLoginModule required username\="'$CC_API_KEY'" password\="'$CC_API_SECRET'";'
+export SASL_JAAS_CONFIG_PROPERTY_FORMAT='org.apache.kafka.common.security.plain.PlainLoginModule required username="'$CC_API_KEY'" password="'$CC_API_SECRET'";'
 export REPOSITORY=confluentinc
 export CONFLUENT_DOCKER_TAG=5.4.1
 export CONNECT_CONFIGS_TOPIC=connect-xyz-configs
@@ -14,3 +14,6 @@ export CONNECT_GROUP_ID=connect-xyz
 export SCHEMA_REGISTRY_URL=
 export SCHEMA_REGISTRY_KEY=
 export SCHEMA_REGISTRY_SECRET=
+export KSQL_API_KEY=
+export KSQL_API_SECRET=
+export KSQL_URL=
