added scripts for creating streams, configuring acls, connecting to ksql via the cli

--- a/envs/template.env
+++ b/envs/template.env
@@ -17,3 +17,5 @@ export SCHEMA_REGISTRY_SECRET=
 export KSQL_API_KEY=
 export KSQL_API_SECRET=
 export KSQL_URL=
+export KSQL_CLUSTER_ID=
+export KAFKA_CLUSTER_ID=
